Fix broken links

--- a/docs/comparison/dspy.mdx
+++ b/docs/comparison/dspy.mdx
@@ -16,7 +16,7 @@ TensorZero is a full-stack LLM engineering platform focused on production applic
 
 - **LLM Programming Abstractions.**
   Both TensorZero and DSPy provide abstractions for working with LLMs in a structured way, moving beyond raw prompting to more maintainable approaches.<br />
-  [→ Prompt Templates & Schemas with TensorZero](/docs/gateway/guides/prompt-templates-schemas/)
+  [→ Prompt Templates & Schemas with TensorZero](/gateway/guides/prompt-templates-schemas/)
 
 - **Automated Prompt Engineering.**
   TensorZero implements MIPROv2, the automated prompt engineering algorithm recommended by DSPy.
@@ -34,12 +34,12 @@ TensorZero is a full-stack LLM engineering platform focused on production applic
 - **Model Optimization.**
   TensorZero provides tools for optimizing models, including fine-tuning and RLHF.
   DSPy primarily focuses on automated prompt engineering.<br />
-  [→ Optimization Recipes with TensorZero](/docs/recipes/)
+  [→ Optimization Recipes with TensorZero](/recipes/)
 
 - **Inference-Time Optimization.**
   TensorZero provides inference-time optimizations like dynamic in-context learning.
   DSPy focuses on offline optimization strategies (e.g. static in-context learning).<br />
-  [→ Inference-Time Optimizations with TensorZero](/docs/gateway/guides/inference-time-optimizations/)
+  [→ Inference-Time Optimizations with TensorZero](/gateway/guides/inference-time-optimizations/)
 
 ### DSPy
 
