--- a/docs/comparison/langfuse.mdx
+++ b/docs/comparison/langfuse.mdx
@@ -24,7 +24,7 @@ That said, **you can get the best of both worlds by using TensorZero alongside L
   Both TensorZero and Langfuse offer built-in evaluations features, enabling you to sanity check and benchmark the performance of your prompts, models, and more &mdash; using heuristics and LLM judges.
   TensorZero LLM judges are also TensorZero functions, which means you can optimize them using TensorZero's optimization recipes.
   Langfuse offers a broader set of built-in heuristics and UI features for evaluations.<br />
-  [→ TensorZero Evaluations Overview](/docs/evaluations/)
+  [→ TensorZero Evaluations Overview](/evaluations/)
 
 ## Key Differences
 
@@ -33,27 +33,27 @@ That said, **you can get the best of both worlds by using TensorZero alongside L
 - **Unified Inference API.**
   TensorZero offers a unified inference API that allows you to access LLMs from most major model providers with a single integration, with support for structured outputs, tool use, streaming, and more.
   Langfuse doesn't provide a built-in LLM gateway.<br />
-  [→ TensorZero Gateway Quickstart](/docs/quickstart/)
+  [→ TensorZero Gateway Quickstart](/quickstart/)
 
 - **Built-in Inference-Time Optimizations.**
   TensorZero offers built-in inference-time optimizations (e.g. dynamic in-context learning), allowing you to optimize your inference performance.
   Langfuse doesn't offer any inference-time optimizations.<br />
-  [→ Inference-Time Optimizations with TensorZero](/docs/gateway/guides/inference-time-optimizations/)
+  [→ Inference-Time Optimizations with TensorZero](/gateway/guides/inference-time-optimizations/)
 
 - **Optimization Recipes.**
   TensorZero offers optimization recipes (e.g. supervised fine-tuning, RLHF, MIPRO) that leverage your own data to improve your LLM's performance.
   Langfuse doesn't offer built-in features like this.<br />
-  [→ Optimization Recipes with TensorZero](/docs/recipes/)
+  [→ Optimization Recipes with TensorZero](/recipes/)
 
 - **Automatic Fallbacks for Higher Reliability.**
   TensorZero offers automatic fallbacks to increase reliability.
   Langfuse doesn't offer any such features.<br />
-  [→ Retries & Fallbacks with TensorZero](/docs/gateway/guides/retries-fallbacks/)
+  [→ Retries & Fallbacks with TensorZero](/gateway/guides/retries-fallbacks/)
 
 - **Built-in Experimentation (A/B Testing).**
   TensorZero offers built-in experimentation features, allowing you to run experiments on your prompts, models, and inference strategies.
   Langfuse doesn't offer any experimentation features.<br />
-  [→ Experimentation (A/B Testing) with TensorZero](/docs/gateway/guides/experimentation/)
+  [→ Experimentation (A/B Testing) with TensorZero](/gateway/guides/experimentation/)
 
 ### Langfuse
 
