--- a/docs/evaluations/dynamic-evaluations/tutorial.mdx
+++ b/docs/evaluations/dynamic-evaluations/tutorial.mdx
@@ -234,14 +234,14 @@ Now we can use `episode_info.episode_id` to make inference and feedback calls.
 
 <Tip title="New to TensorZero?">
 
-See our [Quickstart](/docs/quickstart/) to learn how to set up our LLM gateway, observability, and fine-tuning &mdash; in just 5 minutes.
+See our [Quickstart](/quickstart/) to learn how to set up our LLM gateway, observability, and fine-tuning &mdash; in just 5 minutes.
 
 </Tip>
 
 <Tip title="Using the OpenAI SDK?">
 
 You can also use the OpenAI SDK for inference calls.
-See the [Quickstart](/docs/quickstart/) for more details.
+See the [Quickstart](/quickstart/) for more details.
 
 (Similarly, you can also use dynamic evaluations with any framework or agent that is OpenAI-compatible by passing along the episode ID and function name in the request to TensorZero.)
 
