--- a/docs/evaluations/static-evaluations/tutorial.mdx
+++ b/docs/evaluations/static-evaluations/tutorial.mdx
@@ -8,7 +8,7 @@ This guide shows how to define and run static evaluations for your TensorZero fu
 
 <Tip title="New to TensorZero?">
 
-See our [Quickstart](/docs/quickstart/) to learn how to set up our LLM gateway, observability, and fine-tuning &mdash; in just 5 minutes.
+See our [Quickstart](/quickstart/) to learn how to set up our LLM gateway, observability, and fine-tuning &mdash; in just 5 minutes.
 
 </Tip>
 
@@ -86,7 +86,7 @@ Let's create a dataset:
 
 <Tip>
 
-See the [Datasets & Datapoints API Reference](/docs/gateway/api-reference/datasets-datapoints/) to learn how to create and manage datasets programmatically.
+See the [Datasets & Datapoints API Reference](/gateway/api-reference/datasets-datapoints/) to learn how to create and manage datasets programmatically.
 
 </Tip>
 
@@ -256,7 +256,7 @@ It'll exit with code 0 if all evaluations succeed (average score vs. `cutoff`), 
 
 <Tip>
 
-By default, TensorZero Evaluations uses [Inference Caching](/docs/gateway/guides/inference-caching/) to improve inference speed and cost.
+By default, TensorZero Evaluations uses [Inference Caching](/gateway/guides/inference-caching/) to improve inference speed and cost.
 
 </Tip>
 
