--- a/docs/gateway/guides/episodes.mdx
+++ b/docs/gateway/guides/episodes.mdx
@@ -39,7 +39,7 @@ You can also find the runnable code for this example on [GitHub](https://github.
 
 ## Scenario
 
-In the [Quickstart](/docs/quickstart/), we built a simple LLM application that writes haikus about artificial intelligence.
+In the [Quickstart](/quickstart/), we built a simple LLM application that writes haikus about artificial intelligence.
 
 Imagine we want to separately generate some commentary about the haiku, and present both pieces of content to users.
 We can associate both inferences with the same episode.
@@ -179,5 +179,5 @@ ChatInferenceResponse(
 ## Conclusion & Next Steps
 
 Episodes are first-class citizens in TensorZero that enable powerful workflows for multi-step LLM systems.
-You can use them alongside other features like [experimentation](/docs/gateway/tutorial/#experimentation), [metrics & feedback](/docs/gateway/guides/metrics-feedback/), and [tool use (function calling)](/docs/gateway/tutorial/#tools).
+You can use them alongside other features like [experimentation](/gateway/tutorial/#experimentation), [metrics & feedback](/gateway/guides/metrics-feedback/), and [tool use (function calling)](/gateway/tutorial/#tools).
 For example, you can track KPIs for entire episodes instead of individual inferences, and later jointly optimize your LLMs to maximize these metrics.
