--- a/docs/gateway/guides/inference-time-optimizations.mdx
+++ b/docs/gateway/guides/inference-time-optimizations.mdx
@@ -67,7 +67,7 @@ TensorZero will automatically make the necessary prompt modifications to evaluat
 
 </Tip>
 
-Read more about the `experimental_best_of_n` variant type in [Configuration Reference](/docs/gateway/configuration-reference/#type-experimental_best_of_n).
+Read more about the `experimental_best_of_n` variant type in [Configuration Reference](/gateway/configuration-reference/#type-experimental_best_of_n).
 
 <Tip>
 
@@ -149,8 +149,8 @@ We provide a sample recipe that simplifies this process: [Dynamic In-Context Lea
 This recipe supports selecting examples based on boolean metrics, float metrics, and demonstrations.
 It helps you populate the `DynamicInContextLearningExample` table with high-quality, relevant examples from your historical data.
 
-For more information on the `DynamicInContextLearningExample` table and its role in the TensorZero data model, see [Data Model](/docs/gateway/data-model/).
-For a comprehensive list of configuration options for the `experimental_dynamic_in_context_learning` variant type, see [Configuration Reference](/docs/gateway/configuration-reference/#type-experimental_dynamic_in_context_learning).
+For more information on the `DynamicInContextLearningExample` table and its role in the TensorZero data model, see [Data Model](/gateway/data-model/).
+For a comprehensive list of configuration options for the `experimental_dynamic_in_context_learning` variant type, see [Configuration Reference](/gateway/configuration-reference/#type-experimental_dynamic_in_context_learning).
 
 <Tip>
 
@@ -221,7 +221,7 @@ TensorZero will automatically make the necessary prompt modifications to combine
 
 </Tip>
 
-Read more about the `experimental_mixture_of_n` variant type in [Configuration Reference](/docs/gateway/configuration-reference/#type-experimental_mixture_of_n).
+Read more about the `experimental_mixture_of_n` variant type in [Configuration Reference](/gateway/configuration-reference/#type-experimental_mixture_of_n).
 
 <Tip>
 
