--- a/docs/gateway/guides/providers/gcp-vertex-ai-gemini.mdx
+++ b/docs/gateway/guides/providers/gcp-vertex-ai-gemini.mdx
@@ -22,7 +22,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -46,7 +46,7 @@ type = "chat_completion"
 model = "gemini_2_0_flash"
 ```
 
-See the [list of models available on GCP Vertex AI Gemini](https://cloud.google.com/vertex-ai/generative-ai/docs/learn/model-versions).
+See the [list of models available on GCP Vertex AI Gemini](https://cloud.google.com/vertex-ai/generative-ai/learn/model-versions).
 
 Alternatively, you can use the short-hand `gcp_vertex_gemini::model_name` to use a GCP Vertex AI Gemini model with TensorZero if you don't need advanced features like fallbacks or custom credentials:
 
@@ -55,10 +55,10 @@ Alternatively, you can use the short-hand `gcp_vertex_gemini::model_name` to use
 
 ### Credentials
 
-You must generate a GCP service account key in JWT form (described [here](https://cloud.google.com/docs/authentication/provide-credentials-adc#service-account)) and point to it in the `GCP_VERTEX_CREDENTIALS_PATH` environment variable.
+You must generate a GCP service account key in JWT form (described [here](https://cloud.google.com/authentication/provide-credentials-adc#service-account)) and point to it in the `GCP_VERTEX_CREDENTIALS_PATH` environment variable.
 
 You can customize the credential location by setting the `credential_location` to `env::YOUR_ENVIRONMENT_VARIABLE`.
-See the [Credential Management](/docs/gateway/guides/credential-management/) guide and [Configuration Reference](/docs/gateway/configuration-reference/) for more information.
+See the [Credential Management](/gateway/guides/credential-management/) guide and [Configuration Reference](/gateway/configuration-reference/) for more information.
 
 ### Deployment (Docker Compose)
 
@@ -66,7 +66,7 @@ Create a minimal Docker Compose configuration:
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
 
 services:
   gateway:
