--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -106,7 +106,7 @@ curl -LO "https://raw.githubusercontent.com/tensorzero/tensorzero/refs/heads/mai
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
 
 services:
   clickhouse:
@@ -528,7 +528,7 @@ Once the job is complete, the TensorZero UI will provide a configuration snippet
 
 <Tip>
 
-We can also send [metrics & feedback](/docs/gateway/guides/metrics-feedback/) to the TensorZero Gateway.
+We can also send [metrics & feedback](/gateway/guides/metrics-feedback/) to the TensorZero Gateway.
 This data is used to curate better datasets for fine-tuning and other optimization workflows.
 Since we haven't done that yet, the TensorZero UI will skip the curation step before fine-tuning.
 
@@ -538,7 +538,7 @@ Since we haven't done that yet, the TensorZero UI will skip the curation step be
 
 The Quickstart guide gives a tiny taste of what TensorZero is capable of.
 
-We strongly encourage you to check out the guides on [metrics & feedback](/docs/gateway/guides/metrics-feedback/) and [prompt templates & schemas](/docs/gateway/guides/prompt-templates-schemas/).
+We strongly encourage you to check out the guides on [metrics & feedback](/gateway/guides/metrics-feedback/) and [prompt templates & schemas](/gateway/guides/prompt-templates-schemas/).
 Though optional, they unlock many of the downstream features TensorZero offers in experimentation and optimization.
 
-From here, you can explore features like built-in support for [inference-time optimizations](/docs/gateway/guides/inference-time-optimizations/), [retries & fallbacks](/docs/gateway/guides/retries-fallbacks/), [experimentation (A/B testing) with prompts and models](/docs/gateway/tutorial/#experimentation), and a lot more.
+From here, you can explore features like built-in support for [inference-time optimizations](/gateway/guides/inference-time-optimizations/), [retries & fallbacks](/gateway/guides/retries-fallbacks/), [experimentation (A/B testing) with prompts and models](/gateway/tutorial/#experimentation), and a lot more.
