--- a/docs/recipes/index.mdx
+++ b/docs/recipes/index.mdx
@@ -6,7 +6,7 @@ description: Learn more about using TensorZero Recipes to optimize your LLM appl
 TensorZero Recipes are a set of pre-built workflows for optimizing your LLM applications.
 You can also create your own recipes to customize the workflow to your needs.
 
-The [TensorZero Gateway](/docs/gateway/) collects structured inference data and the downstream feedback associated with it.
+The [TensorZero Gateway](/gateway/) collects structured inference data and the downstream feedback associated with it.
 This dataset sets the perfect foundation for building and optimizing LLM applications.
 As this dataset builds up, you can use these recipes to generate powerful variants for your functions.
 For example, you can use this dataset to curate data to fine-tune a custom LLM, or run an automated prompt engineering workflow.
@@ -58,7 +58,7 @@ The recipe supports selecting examples based on boolean metrics, float metrics, 
 Many more recipes are on the way. This will be our primary engineering focus in the coming months.
 We also plan to publish a dashboard that'll further streamline some of these recipes (e.g. one-click fine-tuning).
 
-Read more about our [Vision & Roadmap](/docs/vision-roadmap/).
+Read more about our [Vision & Roadmap](/vision-roadmap/).
 
 </Tip>
 
@@ -81,7 +81,7 @@ See [Automated Prompt Engineering with MIPRO](https://github.com/tensorzero/tens
 
 The TensorZero Gateway offers built-in inference-time optimizations like dynamic in-context learning and best/mixture-of-N sampling.
 
-See [Inference-Time Optimizations](/docs/gateway/guides/inference-time-optimizations/) for more information.
+See [Inference-Time Optimizations](/gateway/guides/inference-time-optimizations/) for more information.
 
 ## Custom Recipes
 
