--- a/docs/ui/deployment.mdx
+++ b/docs/ui/deployment.mdx
@@ -9,7 +9,7 @@ It's easy to get started with the TensorZero UI.
 
 <Tip>
 
-See the [TensorZero Gateway Deployment Guide](/docs/gateway/deployment/) for more details on how to deploy the gateway and ClickHouse database.
+See the [TensorZero Gateway Deployment Guide](/gateway/deployment/) for more details on how to deploy the gateway and ClickHouse database.
 
 </Tip>
 
