--- a/docs/comparison/openrouter.mdx
+++ b/docs/comparison/openrouter.mdx
@@ -12,11 +12,11 @@ That said, **you can get the best of both worlds by using OpenRouter as a model 
 
 - **Unified Inference API.**
   Both TensorZero and OpenRouter offer a unified inference API that allows you to access LLMs from most major model providers with a single integration, with support for structured outputs, tool use, streaming, and more.<br />
-  [→ TensorZero Gateway Quickstart](/docs/quickstart/)
+  [→ TensorZero Gateway Quickstart](/quickstart/)
 
 - **Automatic Fallbacks for Higher Reliability.**
   Both TensorZero and OpenRouter offer automatic fallbacks to increase reliability.<br />
-  [→ Retries & Fallbacks with TensorZero](/docs/gateway/guides/retries-fallbacks/)
+  [→ Retries & Fallbacks with TensorZero](/gateway/guides/retries-fallbacks/)
 
 ## Key Differences
 
@@ -38,50 +38,50 @@ That said, **you can get the best of both worlds by using OpenRouter as a model 
 - **Built-in Evaluations.**
   TensorZero offers built-in functionality, including heuristics and LLM judges.
   OpenRouter doesn't offer any evaluation features.<br />
-  [→ TensorZero Evaluations Overview](/docs/evaluations/)
+  [→ TensorZero Evaluations Overview](/evaluations/)
 
 - **Built-in Experimentation (A/B Testing).**
   TensorZero offers built-in experimentation features, allowing you to run experiments on your prompts, models, and inference strategies.
   OpenRouter doesn't offer any experimentation features.<br />
-  [→ Experimentation (A/B Testing) with TensorZero](/docs/gateway/guides/experimentation/)
+  [→ Experimentation (A/B Testing) with TensorZero](/gateway/guides/experimentation/)
 
 - **Built-in Inference-Time Optimizations.**
   TensorZero offers built-in inference-time optimizations (e.g. dynamic in-context learning), allowing you to optimize your inference performance.
   OpenRouter doesn't offer any inference-time optimizations, except for dynamic model routing via NotDiamond.<br />
-  [→ Inference-Time Optimizations with TensorZero](/docs/gateway/guides/inference-time-optimizations/)
+  [→ Inference-Time Optimizations with TensorZero](/gateway/guides/inference-time-optimizations/)
 
 - **Optimization Recipes.**
   TensorZero offers optimization recipes (e.g. supervised fine-tuning, RLHF, MIPRO) that leverage your own data to improve your LLM's performance.
   OpenRouter doesn't offer any features like this.<br />
-  [→ Optimization Recipes with TensorZero](/docs/recipes/)
+  [→ Optimization Recipes with TensorZero](/recipes/)
 
 - **Batch Inference.**
   TensorZero supports batch inference with certain model providers, which significantly reduces inference costs.
   OpenRouter doesn't support batch inference.<br />
-  [→ Batch Inference with TensorZero](/docs/gateway/guides/batch-inference/)
+  [→ Batch Inference with TensorZero](/gateway/guides/batch-inference/)
 
 - **Inference Caching.**
   TensorZero offers inference caching, which can significantly reduce inference costs and latency.
   OpenRouter doesn't offer inference caching.<br />
-  [→ Inference Caching with TensorZero](/docs/gateway/guides/inference-caching/)
+  [→ Inference Caching with TensorZero](/gateway/guides/inference-caching/)
 
 - **Schemas, Templates, GitOps.**
   TensorZero enables a schema-first approach to building LLM applications, allowing you to separate your application logic from LLM implementation details.
   This approach allows your to more easily manage complex LLM applications, benefit from GitOps for prompt and configuration management, counterfactually improve data for optimization, and more.
   OpenRouter only offers the standard unstructured chat completion interface.<br />
-  [→ Prompt Templates & Schemas with TensorZero](/docs/gateway/guides/prompt-templates-schemas/)
+  [→ Prompt Templates & Schemas with TensorZero](/gateway/guides/prompt-templates-schemas/)
 
 ### OpenRouter
 
 - **Dynamic Provider Routing.**
   OpenRouter allows you to dynamically route requests to different model providers based on latency, cost, and availability.
   TensorZero only offers static routing capabilities, i.e. a pre-defined sequence of model providers to attempt.<br />
-  [→ Retries & Fallbacks with TensorZero](/docs/gateway/guides/retries-fallbacks/)
+  [→ Retries & Fallbacks with TensorZero](/gateway/guides/retries-fallbacks/)
 
 - **Dynamic Model Routing.**
   OpenRouter integrates with NotDiamond to offer dynamic model routing based on input.
   TensorZero supports other inference-time optimizations but doesn't support dynamic model routing at this time.<br />
-  [→ Inference-Time Optimizations with TensorZero](/docs/gateway/guides/inference-time-optimizations/)
+  [→ Inference-Time Optimizations with TensorZero](/gateway/guides/inference-time-optimizations/)
 
 - **Consolidated Billing.**
   OpenRouter allows you to access every supported model using a single OpenRouter API key.
@@ -98,4 +98,4 @@ Is TensorZero missing any features that are really important to you? Let us know
 ## Combining TensorZero and OpenRouter
 
 You can get the best of both worlds by using OpenRouter as a model provider inside TensorZero.
-Learn more about using [OpenRouter as a model provider](/docs/gateway/guides/providers/openrouter/).
+Learn more about using [OpenRouter as a model provider](/gateway/guides/providers/openrouter/).
