--- a/docs/evaluations/static-evaluations/cli-reference.mdx
+++ b/docs/evaluations/static-evaluations/cli-reference.mdx
@@ -45,7 +45,7 @@ You can build the TensorZero Evaluations CLI from source if necessary. See our [
 
 ### Inference Caching
 
-TensorZero Evaluations uses [Inference Caching](/docs/gateway/guides/inference-caching/) to improve inference speed and cost.
+TensorZero Evaluations uses [Inference Caching](/gateway/guides/inference-caching/) to improve inference speed and cost.
 
 By default, it will read from and write to the inference cache.
 Soon, you'll be able to customize this behavior.
@@ -67,7 +67,7 @@ This environment variable specifies the URL of your ClickHouse database.
 If you're using an external TensorZero Gateway (see `--gateway-url` flag below), you don't need to provide these credentials to the evaluations tool.
 
 If you're using a built-in gateway (no `--gateway-url` flag), you must provide same credentials the gateway would use.
-See [Integrations](/docs/gateway/integrations/) for more information.
+See [Integrations](/gateway/integrations/) for more information.
 
 ### CLI Flags
 
@@ -120,7 +120,7 @@ If you provide this flag, the evaluations tool will use an external TensorZero G
 
 If you don't provide this flag, the evaluations tool will use a built-in TensorZero gateway.
 In this case, the evaluations tool will require the same credentials the gateway would use.
-See [Integrations](/docs/gateway/integrations/) for more information.
+See [Integrations](/gateway/integrations/) for more information.
 
 #### `--inference-cache MODE`
 
@@ -129,7 +129,7 @@ See [Integrations](/docs/gateway/integrations/) for more information.
 - **Required:** no (default: `on`)
 
 This flag specifies the behavior of the inference cache.
-See [Inference Caching](/docs/gateway/guides/inference-caching/) for more information.
+See [Inference Caching](/gateway/guides/inference-caching/) for more information.
 
 #### `--variant-name NAME` (`-v`)
 
