--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -343,7 +343,7 @@ Separately, you can set a global timeout for the entire inference request using 
 - **Type:** string
 - **Required:** yes
 
-Defines the types of the provider. See [Integrations &raquo; Model Providers](/docs/gateway/api-reference/inference/#content-block) for details.
+Defines the types of the provider. See [Integrations &raquo; Model Providers](/gateway/api-reference/inference/#content-block) for details.
 
 The supported provider types are `anthropic`, `aws_bedrock`, `aws_sagemaker`, `azure`, `deepseek`, `fireworks`, `gcp_vertex_anthropic`, `gcp_vertex_gemini`, `google_ai_studio_gemini`, `groq`, `hyperbolic`, `mistral`, `openai`, `openrouter`, `sglang`, `tgi`, `together`, `vllm`, and `xai`.
 
@@ -365,7 +365,7 @@ type = "azure"
 - **Required:** yes
 
 Defines the model name to use with the Anthropic API.
-See <a href="https://docs.anthropic.com/en/docs/about-claude/models#model-names" target="_blank">Anthropic's documentation</a> for the list of available model names.
+See <a href="https://docs.anthropic.com/en/about-claude/models#model-names" target="_blank">Anthropic's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -381,7 +381,7 @@ model_name = "claude-3-haiku-20240307"
 - **Type:** string
 - **Required:** no (default: `env::ANTHROPIC_API_KEY`)
 
-Defines the location of the API key for the Anthropic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Anthropic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -569,7 +569,7 @@ endpoint = "https://<your-endpoint>.openai.azure.com"
 - **Type:** string
 - **Required:** no (default: `env::AZURE_OPENAI_API_KEY`)
 
-Defines the location of the API key for the Azure OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Azure OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -607,7 +607,7 @@ model_name = "deepseek-chat"
 - **Type:** string
 - **Required:** no (default: `env::DEEPSEEK_API_KEY`)
 
-Defines the location of the API key for the DeepSeek provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the DeepSeek provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -647,7 +647,7 @@ model_name = "accounts/fireworks/models/llama-v3p1-8b-instruct"
 - **Type:** string
 - **Required:** no (default: `env::FIREWORKS_API_KEY`)
 
-Defines the location of the API key for the Fireworks provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Fireworks provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -729,7 +729,7 @@ project_id = "your-project-id"
 - **Type:** string
 - **Required:** no (default: `env::GCP_CREDENTIALS_PATH`)
 
-Defines the location of the credentials for the GCP Vertex Anthropic provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
+Defines the location of the credentials for the GCP Vertex Anthropic provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
 
 ```toml
 // tensorzero.toml
@@ -778,7 +778,7 @@ location = "us-central1"
 
 Defines the model ID of the GCP Vertex AI model.
 
-See <a href="https://cloud.google.com/vertex-ai/generative-ai/docs/learn/model-versions" target="_blank">GCP Vertex AI's documentation</a> for the list of available model IDs.
+See <a href="https://cloud.google.com/vertex-ai/generative-ai/learn/model-versions" target="_blank">GCP Vertex AI's documentation</a> for the list of available model IDs.
 
 ```toml
 // tensorzero.toml
@@ -810,7 +810,7 @@ project_id = "your-project-id"
 - **Type:** string
 - **Required:** no (default: `env::GCP_CREDENTIALS_PATH`)
 
-Defines the location of the credentials for the GCP Vertex Gemini provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
+Defines the location of the credentials for the GCP Vertex Gemini provider. The supported locations are `env::PATH_TO_CREDENTIALS_FILE`, `dynamic::CREDENTIALS_ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details), and `file::PATH_TO_CREDENTIALS_FILE`.
 
 ```toml
 // tensorzero.toml
@@ -833,7 +833,7 @@ credential_location = "dynamic::gcp_credentials_path"
 - **Required:** yes
 
 Defines the model name to use with the Google AI Studio Gemini API.
-See <a href="https://ai.google.dev/gemini-api/docs/models/gemini" target="_blank">Google AI Studio's documentation</a> for the list of available model names.
+See <a href="https://ai.google.dev/gemini-api/models/gemini" target="_blank">Google AI Studio's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -849,7 +849,7 @@ model_name = "gemini-1.5-flash-001"
 - **Type:** string
 - **Required:** no (default: `env::GOOGLE_AI_STUDIO_API_KEY`)
 
-Defines the location of the API key for the Google AI Studio Gemini provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Google AI Studio Gemini provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -888,7 +888,7 @@ model_name = "meta-llama/llama-4-scout-17b-16e-instruct"
 - **Type:** string
 - **Required:** no (default: `env::GROQ_API_KEY`)
 
-Defines the location of the API key for the Groq provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Groq provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -927,7 +927,7 @@ model_name = "meta-llama/Meta-Llama-3-70B-Instruct"
 - **Type:** string
 - **Required:** no (default: `env::HYPERBOLIC_API_KEY`)
 
-Defines the location of the API key for the Hyperbolic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Hyperbolic provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -966,7 +966,7 @@ model_name = "open-mistral-nemo-2407"
 - **Type:** string
 - **Required:** no (default: `env::MISTRAL_API_KEY`)
 
-Defines the location of the API key for the Mistral provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Mistral provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1008,7 +1008,7 @@ api_base = "https://api.openai.com/v1/"
 
 Defines the model name to use with the OpenAI API.
 
-See <a href="https://platform.openai.com/docs/models" target="_blank">OpenAI's documentation</a> for the list of available model names.
+See <a href="https://platform.openai.com/models" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -1024,7 +1024,7 @@ model_name = "gpt-4o-mini-2024-07-18"
 - **Type:** string
 - **Required:** no (default: `env::OPENAI_API_KEY`)
 
-Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1064,7 +1064,7 @@ model_name = "openai/gpt4.1"
 - **Type:** string
 - **Required:** no (default: `env::OPENROUTER_API_KEY`)
 
-Defines the location of the API key for the OpenRouter provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the OpenRouter provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1101,7 +1101,7 @@ api_base = "http://localhost:8080/v1/"
 - **Type:** string
 - **Required:** no (default: `none`)
 
-Defines the location of the API key for the SGLang provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the SGLang provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1125,7 +1125,7 @@ api_key_location = "dynamic::sglang_api_key"
 
 Defines the model name to use with the Together API.
 
-See <a href="https://docs.together.ai/docs/chat-models" target="_blank">Together's documentation</a> for the list of available model names.
+See <a href="https://docs.together.ai/chat-models" target="_blank">Together's documentation</a> for the list of available model names.
 You can also deploy your own models on Together AI.
 
 ```toml
@@ -1142,7 +1142,7 @@ model_name = "meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo"
 - **Type:** string
 - **Required:** no (default: `env::TOGETHER_API_KEY`)
 
-Defines the location of the API key for the Together AI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the Together AI provider. The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1195,7 +1195,7 @@ model_name = "microsoft/Phi-3.5-mini-instruct"
 - **Type:** string
 - **Required:** no (default: `env::VLLM_API_KEY`)
 
-Defines the location of the API key for the vLLM provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the vLLM provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1219,7 +1219,7 @@ api_key_location = "dynamic::vllm_api_key"
 
 Defines the model name to use with the xAI API.
 
-See <a href="https://docs.x.ai/docs/models" target="_blank">xAI's documentation</a> for the list of available model names.
+See <a href="https://docs.x.ai/models" target="_blank">xAI's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -1236,7 +1236,7 @@ model_name = "grok-2-1212"
 - **Required:** no (default: `env::XAI_API_KEY`)
 
 Defines the location of the API key for the xAI provider.
-The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+The supported locations are `env::ENVIRONMENT_VARIABLE` and `dynamic::ARGUMENT_NAME` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1273,7 +1273,7 @@ api_base = "http://localhost:8080/v1/"
 - **Type:** string
 - **Required:** no (default: `none`)
 
-Defines the location of the API key for the TGI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the TGI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1361,7 +1361,7 @@ routing = ["openai", "alternative-provider"]
 - **Type:** string
 - **Required:** yes
 
-Defines the types of the provider. See [Integrations &raquo; Model Providers](/docs/gateway/integrations/#model-providers) for details.
+Defines the types of the provider. See [Integrations &raquo; Model Providers](/gateway/integrations/#model-providers) for details.
 
 TensorZero currently only supports `openai` as a provider for embedding models.
 More integrations are on the way.
@@ -1404,7 +1404,7 @@ api_base = "https://api.openai.com/v1/"
 
 Defines the model name to use with the OpenAI API.
 
-See <a href="https://platform.openai.com/docs/models/embeddings" target="_blank">OpenAI's documentation</a> for the list of available model names.
+See <a href="https://platform.openai.com/models/embeddings" target="_blank">OpenAI's documentation</a> for the list of available model names.
 
 ```toml
 // tensorzero.toml
@@ -1420,7 +1420,7 @@ model_name = "text-embedding-3-small"
 - **Type:** string
 - **Required:** no (default: `env::OPENAI_API_KEY`)
 
-Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/docs/gateway/api-reference/inference/#credentials)) for more details).
+Defines the location of the API key for the OpenAI provider. The supported locations are `env::ENVIRONMENT_VARIABLE`, `dynamic::ARGUMENT_NAME`, and `none` (see [the API reference](/gateway/api-reference/inference/#credentials)) for more details).
 
 ```toml
 // tensorzero.toml
@@ -1998,7 +1998,7 @@ routing = ["openai", "azure"]
 
 Then:
 
-- `model = "gpt-4o"` calls the `gpt-4o` model in your configuration, which supports fallback from `openai` to `azure`. See [Retries & Fallbacks](/docs/gateway/guides/retries-fallbacks/) for details.
+- `model = "gpt-4o"` calls the `gpt-4o` model in your configuration, which supports fallback from `openai` to `azure`. See [Retries & Fallbacks](/gateway/guides/retries-fallbacks/) for details.
 - `model = "openai::gpt-4o"` calls the OpenAI API directly for the `gpt-4o` model, ignoring the `gpt-4o` model defined above.
 
 ##### `presence_penalty`
@@ -2714,7 +2714,7 @@ routing = ["openai", "azure"]
 
 Then:
 
-- `model = "gpt-4o"` calls the `gpt-4o` model in your configuration, which supports fallback from `openai` to `azure`. See [Retries & Fallbacks](/docs/gateway/guides/retries-fallbacks/) for details.
+- `model = "gpt-4o"` calls the `gpt-4o` model in your configuration, which supports fallback from `openai` to `azure`. See [Retries & Fallbacks](/gateway/guides/retries-fallbacks/) for details.
 - `model = "openai::gpt-4o"` calls the OpenAI API directly for the `gpt-4o` model, ignoring the `gpt-4o` model defined above.
 
 ##### `retries`
