--- a/docs/gateway/guides/providers/aws-bedrock.mdx
+++ b/docs/gateway/guides/providers/aws-bedrock.mdx
@@ -22,7 +22,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -54,7 +54,7 @@ See the [AWS documentation on inference profiles](https://docs.aws.amazon.com/be
 
 </Tip>
 
-See the [Configuration Reference](/docs/gateway/configuration-reference/) for optional fields (e.g. overriding the `region`).
+See the [Configuration Reference](/gateway/configuration-reference/) for optional fields (e.g. overriding the `region`).
 
 ### Credentials
 
@@ -77,7 +77,7 @@ Create a minimal Docker Compose configuration:
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
 
 services:
   gateway:
