--- a/docs/gateway/guides/providers/hyperbolic.mdx
+++ b/docs/gateway/guides/providers/hyperbolic.mdx
@@ -54,7 +54,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -83,7 +83,7 @@ See the [list of models available on Hyperbolic](https://app.hyperbolic.xyz/mode
 You must set the `HYPERBOLIC_API_KEY` environment variable before running the gateway.
 
 You can customize the credential location by setting the `api_key_location` to `env::YOUR_ENVIRONMENT_VARIABLE` or `dynamic::ARGUMENT_NAME`.
-See the [Credential Management](/docs/gateway/guides/credential-management/) guide and [Configuration Reference](/docs/gateway/configuration-reference/) for more information.
+See the [Credential Management](/gateway/guides/credential-management/) guide and [Configuration Reference](/gateway/configuration-reference/) for more information.
 
 ### Deployment (Docker Compose)
 
@@ -91,7 +91,7 @@ Create a minimal Docker Compose configuration:
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
 
 services:
   gateway:
