--- a/docs/gateway/guides/providers/vllm.mdx
+++ b/docs/gateway/guides/providers/vllm.mdx
@@ -27,7 +27,7 @@ You can also find the complete code for this example on [GitHub](https://github.
 
 </Tip>
 
-For production deployments, see our [Deployment Guide](/docs/gateway/deployment/).
+For production deployments, see our [Deployment Guide](/gateway/deployment/).
 
 ### Configuration
 
@@ -76,7 +76,7 @@ The `api_key_location` field in your model provider configuration specifies how 
      ```
      The API key can then be passed in the inference request.
 
-See the [Credential Management](/docs/gateway/guides/credential-management/) guide, the [Configuration Reference](/docs/gateway/configuration-reference/), and the [API reference](/docs/gateway/api-reference/inference/) for more details.
+See the [Credential Management](/gateway/guides/credential-management/) guide, the [Configuration Reference](/gateway/configuration-reference/), and the [API reference](/gateway/api-reference/inference/) for more details.
 
 In this example, vLLM is running locally without authentication, so we use `api_key_location = "none"`.
 
@@ -86,7 +86,7 @@ Create a minimal Docker Compose configuration:
 
 ```yaml title="docker-compose.yml"
 # This is a simplified example for learning purposes. Do not use this in production.
-# For production-ready deployments, see: https://www.tensorzero.com/docs/gateway/deployment
+# For production-ready deployments, see: https://www.tensorzero.com/gateway/deployment
 
 services:
   gateway:
