--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -16,8 +16,8 @@ Take what you need, adopt incrementally, and complement with other tools.
 <Tip>
 
 **Start building today.**
-The [Quickstart](/docs/quickstart/) shows it's easy to set up an LLM application with TensorZero.
-If you want to dive deeper, the [Tutorial](/docs/gateway/tutorial/) teaches how to build a simple chatbot, an email copilot, a weather RAG system, and a structured data extraction pipeline.
+The [Quickstart](/quickstart/) shows it's easy to set up an LLM application with TensorZero.
+If you want to dive deeper, the [Tutorial](/gateway/tutorial/) teaches how to build a simple chatbot, an email copilot, a weather RAG system, and a structured data extraction pipeline.
 
 **Questions?**
 Ask us on [Slack](https://www.tensorzero.com/slack) or [Discord](https://www.tensorzero.com/discord).
@@ -26,7 +26,7 @@ Ask us on [Slack](https://www.tensorzero.com/slack) or [Discord](https://www.ten
 Email us at [hello@tensorzero.com](mailto:hello@tensorzero.com) to set up a Slack or Teams channel with your team (free).
 
 **Work with us.**
-We're [hiring in NYC](/jobs/).
+We're [hiring in NYC](https://www.tensorzero.com/jobs/).
 We'd also welcome [open-source contributions](https://github.com/tensorzero/tensorzero/blob/main/CONTRIBUTING.md)!
 
 </Tip>
