--- a/docs/vision-roadmap.mdx
+++ b/docs/vision-roadmap.mdx
@@ -24,11 +24,11 @@ The TensorZero Gateway already stores comprehensive observability data in a Clic
 We're working towards open-sourcing a suite of user-friendly tools (e.g. dashboards) to support your LLM engineering workflows.
 
 **Examples.**
-We've written a [Quickstart](/docs/quickstart/) guide, a comprehensive [Tutorial](/docs/gateway/tutorial/) about the TensorZero Gateway, and many guides and examples.
+We've written a [Quickstart](/quickstart/) guide, a comprehensive [Tutorial](/gateway/tutorial/) about the TensorZero Gateway, and many guides and examples.
 We're working towards adding more complete examples, especially for common workflows (e.g. RAG) and challenges (e.g. evaluations).
 
 **Integrations.**
-We've integrated TensorZero with many popular LLM providers (see [Integrations](/docs/gateway/integrations/)).
+We've integrated TensorZero with many popular LLM providers (see [Integrations](/gateway/integrations/)).
 We're working towards integrating with more providers, as well as third-party LLMOps tools (e.g. fine-tuning, observability).
 
 <Tip>
